<resources>
    <string name="app_name">OnlineShop</string>

    Sign in
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="already_hav">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_apple">Sign in with Apple</string>

    Login
    <string name="log_in_txt">Welcome back</string>
    <string name="password">Password</string>
    <string name="log_in_btn">Login</string>

    Menu
    <string name="home">home</string>
    <string name="favorites">favorites</string>
    <string name="basket">basket</string>
    <string name="message">message</string>
    <string name="user">user</string>

    Menu: Home
    <string name="name_1">Online </string>
    <string name="name_2">shop</string>
    <string name="location">Location</string>
    <string name="what_are_yo">What are you looking for ?</string>

    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>

    <string name="latest">Latest</string>
    <string name="view_all">View all</string>

    <string name="brands">Brands</string>


    Menu: Favorites

    Menu: Basket

    Menu: Messages
    <string name="messages">Messages</string>

    Menu: Profile
    <string name="upload_item">Upload item</string>
    <string name="change_phot">Change photo</string>
    <string name="profile">Profile</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>


    profile -> add new item page
    <string name="add_new_item">Add new item</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>