<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/m_home"
        android:title="@string/home"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/m_favorite"
        android:orderInCategory="2"
        android:title="@string/favorites" />
    <item
        android:id="@+id/basket"
        android:icon="@drawable/m_basket"
        android:title="@string/basket"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/message"
        android:icon="@drawable/m_message"
        android:title="@string/message"
        android:orderInCategory="4"/>
    <item
        android:id="@+id/user"
        android:icon="@drawable/m_user"
        android:title="@string/user"
        android:orderInCategory="5"/>
</menu>